# tauos

./: .gitignore  AWS_DEPLOYMENT_SUMMARY.md  CLEAN_DEPLOYMENT_CHECKLIST.md  COMPLETE_SETUP_GUIDE.md  CUSTOM_DOMAIN_CONFIGURATION.md  Cargo.toml  DEPLOYMENT_ALTERNATIVES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_ISSUE_ANALYSIS.md  DEPLOYMENT_STATUS_REPORT.md  DEPLOYMENT_VERIFICATION_REPORT.md  DESIGN_SYSTEM.md  DOMAIN_CONFIGURATION_GUIDE.md  EMAIL_SERVER_STATUS.md  FINAL_STATUS_SUMMARY.md  FREE_SMTP_PROVIDERS_COMPARISON.md  GCP_SMTP_SETUP_GUIDE.md  INTEGRATION_STATUS.md  POSTGRESQL_SETUP_GUIDE.md  PRODUCTION-DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_ENV_VARIABLES.md  PUBLIC_ROLLOUT_STATUS.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_DOMAIN_SETUP.md  RAILWAY_STATUS.md  README.md  SUPABASE_SETUP_INSTRUCTIONS.md  TAUCLOUD_SERVERLESS_FIX.md  TRACK3_COMPLETION_SUMMARY.md  UNIVERSAL_ACCESSIBILITY_IMPLEMENTATION.md  VERCEL-DEPLOYMENT.md  VERCEL_BOTH_DEPLOYMENTS.md  VERCEL_CLEAN_DEPLOYMENT_GUIDE.md  VERCEL_DASHBOARD_DEPLOYMENT.md  VERCEL_DEPLOYMENT_GUIDE.md  VERCEL_DEPLOYMENT_STATUS.md  VERCEL_FORCE_DEPLOYMENT.md  VERCEL_FRESH_DEPLOYMENT.md  app.js  (+45 more)
apps/taumedia/: Cargo.toml  README.md
apps/taumedia/src/: main.rs  media_player.css
apps/taustore/: Cargo.toml  README.md
apps/taustore/src/: main.rs  taustore.css
audit/: comprehensive_audit.sh  simple_audit.sh
aws-email-infrastructure/: AMAZON_LINUX_SETUP.md  AWS_LOGIN_REFERENCE.md  AWS_SES_RESPONSE.md  CHECK_EMAIL_STATUS.sh  COMPLETE_FIX.sh  CONFIGURE_POSTFIX_SES.sh  DIRECT_SMTP_SOLUTION.md  FINAL_EMAIL_SOLUTION.sh  FINAL_SMTP_TEST.sh  FINAL_SOVEREIGN_SOLUTION.md  FINAL_STATUS.md  FIX_OUTBOUND_SMTP.sh  FREE_SMTP_RELAY.sh  GENERATE_DNS_RECORDS.sh  INTEGRATION_SUMMARY.md  INVESTOR_READY_SUMMARY.md  QUICK_FIX.sh  QUICK_FREE_RELAY.sh  QUICK_SES_SOLUTION.sh  REQUEST_PORT_25_UNBLOCK.sh  SEND_TEST_EMAIL.sh  SEND_WELCOME_EMAIL.sh  SEND_WELCOME_EMAILS.sh  SEND_WELCOME_EMAILS_FINAL.sh  SOVEREIGN_SMTP_SOLUTION.md  STATUS_REPORT.md  TROUBLESHOOTING_STEPS.md  TRUE_INDEPENDENCE_SUMMARY.md  TRY_DIFFERENT_RELAYS.sh  WORKING_SMTP_SOLUTION.sh  deploy-email-server.sh  email-test-summary.md  send-test-email.js  test-email-server.sh  update-tauos-apps.sh
bootloader/: grub.cfg
compliance/: README.md
config/: env.local  pricing.json
core/: init.c  init.sh  netd.c  netd.sh  pkgd.rs  sessiond.c  sessiond.sh
core/tau-session/: Cargo.toml  README.md
core/tau-session/src/: auth.rs  config.rs  logging.rs  main.rs  session.rs
docs/: DOCUMENTATION_SUMMARY.md  INSTALLATION.md  MULTI_PLATFORM_TESTING.md  README.md  ROADMAP.md  SHIMMER_ANIMATIONS.md  VISUAL_IDENTITY.md  app_store.md  core_services.md  enhanced_landing_page_template.md  finalsecurityandqualityaudit.md  landing_page_template.md  launchready.md  privacy_security.md  production-env-template.md  qemu_testing_guide.md  sdk.md  security_model.md  squarespace_dns_setup.md  tau-browser-mockup.html  tau-explorer-mockup.html  tau-home-mockup.html  tau-store-mockup.html  taumail-independent-infrastructure.md  tauos_communication_suite.md  taupkg.md  taupkg_enhanced.md  tauservice.md  taustore_backend.md  taustore_frontend.md  ui_ux.md
export/: build_macos_app.sh  build_macos_app_demo.sh
flatpak-integration/: Cargo.toml  Makefile  flatpakd.c  flatpakd.service
gui/: README.md  dock_sketch.md  launcher.sh  launcher_sketch.md  settings_panel_sketch.md
gui/demo/: Cargo.toml
gui/demo/src/: integration_test.rs  main.rs
gui/demo/src/taukit/: mod.rs  widgets.rs
images/: README.md
infrastructure/: aws-setup-instructions.md  deploy-taumail-infrastructure.sh  dns-configuration.md  mail-server-docker-compose.yml  manual-taumail-setup.md  quick-setup.sh  simple-deploy.sh  simple-ec2-deploy.sh  taumail-email-stack.yaml  test-taumail.sh
installer/: install.sh
kernel/: build_kernel.sh
local-development/: README.md  postgresql-integration-report.md  test-postgresql-integration.sh
mobileosui/: MARKETING_SUMMARY.md  README.md  generate-marketing-assets.sh  generate-mockups.sh  ui-mockups-descriptions.md
pkgmgr/: Cargo.toml
pkgmgr/examples/sample-package/: manifest.toml
pkgmgr/src/: main.rs  metadata.rs  package_manager.rs  repo.rs  sandbox.rs  signature.rs
pkgmgr/tests/: integration_test.rs
sandboxd/: Cargo.toml  Makefile  sandboxd.c  sandboxd.service
screenshots/: FINAL_REPORT.md
scripts/: build-production.sh  build-unified-installer.sh  build_demo.sh  build_macos_iso.sh  build_marketing_iso.sh  deploy-track1.sh  (+44 more)
sdk/: Cargo.toml  README.md  TESTING.md  tau-sdk.rs
sdk/examples/hello-world/: Cargo.toml  tauapp.toml
sdk/examples/hello-world/src/: main.rs
sdk/gui-test/: Cargo.toml
sdk/gui-test/src/: main.rs
sdk/hello-tau/: Cargo.toml
sdk/hello-tau/src/: main.rs
sdk/src/: build.rs  commands.rs  config.rs  main.rs  manifest.rs  package.rs  publish.rs  run.rs  tauui.rs  templates.rs  test.rs  utils.rs
sdk/tauos-demo/: Cargo.toml
sdk/tauos-demo/src/: main.rs
sdk/templates/c-template/: Makefile  main.c
sdk/templates/python-template/: main.py  setup.py
sdk/templates/rust-template/: Cargo.toml
sdk/templates/rust-template/src/: main.rs
sdk/test-tauui/: Cargo.toml
sdk/test-tauui/src/: main.rs
src/tau-browser/: Cargo.toml  browser_ui.rs  main.rs  privacy_features.rs  theme.rs
src/tau-explorer/: Cargo.toml  cloud_integration.rs  explorer_ui.rs  file_operations.rs  main.rs  theme.rs
src/tau-home/: Cargo.toml  desktop.rs  launcher.rs  main.rs  privacy_indicators.rs  theme.rs  wallpapers.rs  widgets.rs
src/tau-store/: Cargo.toml  app_catalog.rs  download_manager.rs  main.rs  store_ui.rs  theme.rs
system-monitoring/: Cargo.toml  SCALABILITY_IMPROVEMENTS_SUMMARY.md  monitoring.md
system-monitoring/src/: cli.rs  config.rs  crash_recovery.rs  health_checker.rs  logging_system.rs  main.rs  process_manager.rs  resource_monitor.rs
tauconnect/clients/tauos/: Cargo.toml
tauconnect/clients/tauos/src/: main.rs
taumail/clients/tauos/: Cargo.toml
taumail/clients/tauos/src/: app.rs  main.rs
taustore/backend/: Cargo.toml
taustore/backend/src/: main.rs
(+394 files in other folders)
