[workspace]
resolver = "2"
members = [
    "core/tau-upd",
    "gui/demo",
    "gui/dock", 
    "gui/launcher",
    "gui/settings",
    "gui/splash",
    "gui/taukit",
    "pkgmgr",
    "sdk",
    "sdk/gui-test",
    "sdk/hello-tau",
    "taustore",
    "sandboxd",
    "flatpak-integration"
]

[workspace.dependencies]
gtk4 = "0.8"
glib = "0.19"
gio = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
jsonwebtoken = "9.0"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
colored = "2.0" 