[package]
name = "tau-pkg"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
sha2 = "0.10"
base64 = "0.21"
# New dependencies for enhanced functionality
ring = "0.17"  # For cryptographic operations
tar = "0.4"    # For package extraction
flate2 = "1.0" # For compression
walkdir = "2.4" # For file operations
anyhow = "1.0" # For error handling
thiserror = "1.0" # For custom error types
log = "0.4"    # For logging
env_logger = "0.10" # For log initialization
hex = "0.4"    # For checksum verification
gtk4 = "0.8"   # For GUI components

[dev-dependencies]
tempfile = "3.8" # For testing 