[package]
name = "tau-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.29"
notify = "6.0"
crossbeam-channel = "1.8"
dashmap = "5.4"
num_cpus = "1.15"
libc = "0.2"
nix = "0.26"
procfs = "0.15"
sysfs = "0.1"
dbus = "0.9"
zbus = "3.0"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3" 