[package]
name = "taumedia"
version = "1.0.0"
edition = "2021"
authors = ["TauOS Team <admin@tauos.org>"]
description = "Tau Media Player - Privacy-first media player for TauOS"
license = "MIT"

[dependencies]
# GUI Framework
gtk = { version = "0.7", features = ["v4_8"] }
glib = "0.18"
gio = "0.18"
adw = "0.5"

# Media Playback
gstreamer = "0.20"
gstreamer-video = "0.20"
gstreamer-audio = "0.20"
gstreamer-app = "0.20"
gstreamer-player = "0.20"

# File Operations
gtk4 = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"

# Configuration
config = "0.13"
toml = "0.8"

# Localization
gettext-rs = "5.0"
gettext = "0.7"

# Audio/Video Processing
cpal = "0.15"
dasp = "0.11"
image = "0.24"

# Database for playlists
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# Async
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[[bin]]
name = "taumedia"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" 