[package]
name = "hello-tau"
version = "0.1.0"
edition = "2021"
authors = ["Tau OS Developer"]
description = "A Tau OS application"

[dependencies]
gtk4 = { workspace = true }
glib = { workspace = true }
gio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[[bin]]
name = "hello-tau"
path = "src/main.rs"
