[package]
name = "tau-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.7", features = ["v4_8"] }
glib = "0.18"
cairo-rs = "0.18"
gdk = { version = "0.7", features = ["v4_8"] }
gdk-pixbuf = "0.18"
gio = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "tau_explorer"
path = "lib.rs"

[[bin]]
name = "tau-explorer"
path = "main.rs" 