[package]
name = "taustore-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_sqlite_pool"] }
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "chrono"] }
jsonwebtoken = "8.3"
chrono = "0.4"
bcrypt = "0.15" 