[package]
name = "tau-rust-app"
version = "0.1.0"
edition = "2021"
authors = ["Tau OS Developer"]
description = "A sample Tau OS application written in Rust"

[dependencies]
gtk4 = "0.7"
gio = "0.18"
tauos = "0.1"

[build-dependencies]
pkg-config = "0.3"

[[bin]]
name = "tau-rust-app"
path = "src/main.rs" 