[package]
name = "taumail-client"
version = "1.0.0"
edition = "2021"
authors = ["TauOS Team <admin@tauos.org>"]
description = "TauMail native client for TauOS"
license = "MIT"

[dependencies]
# GUI Framework
gtk = { version = "0.7", features = ["v4_8"] }
glib = "0.18"
gio = "0.18"
adw = "0.5"

# Email Libraries
lettre = { version = "0.11", features = ["tokio1", "tokio1-rustls-tls", "tokio1-rustls-tls-webpki-roots"] }
imap = { version = "2.4", features = ["tls"] }
native-tls = "0.2"
rustls = "0.21"
webpki-roots = "0.25"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# Cryptography
pgp = "0.3"
crypto-common = "0.1"
aes = "0.8"
sha2 = "0.10"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

# File handling
mime = "0.3"
mime_guess = "2.0"
base64 = "0.21"

# Configuration
config = "0.13"
toml = "0.8"

# Localization
gettext-rs = "5.0"
gettext = "0.7"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[[bin]]
name = "taumail"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" 